# Template_python_app

./: .env  README.md  initalize.sh  initialize.sh  pyproject.toml
src/template_python_application/: app.py
test/: flask_app_test.py
tests/: flask_app_test.py
